--- a/surfboard.conf
+++ b/surfboard.conf
@@ -1,6 +1,3 @@
-#!MANAGED-CONFIG https://sub.shdk2234mask.xyz/api/v1/client/subscribe?token=addb9c6b82c2e16b6c3798b92b12bcee interval=43200 strict=true
-# Thanks @Hackl0us SS-Rule-Snippet
-
 [General]
 loglevel = notify
 ipv6 = false
@@ -94,7 +91,26 @@ lv.5-中国->澳大利亚5=ss,zh01lv5au05.feiguayun.xyz,39087,encrypt-method=aes
 
 
 [Proxy Group]
-
+# > 策略组（下面的节点信息需与外部节点对应，若删除了外部节点里的节点，那么在策略组里也要删除。） 
+ ✈️ 节点选择 = select, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🚀 手动选择 
+ 📲 电报信息 = select, ✈️ 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点 
+ 🎥 奈飞视频 = select, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点 
+ 🎬 迪士尼+ = select, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点 
+ 📹 油管视频 = select, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点 
+ 📽 哔哩哔哩 = select, 🌐 全球直连, 🇭🇰 香港节点, 🇯🇵 日本节点 
+ 🍿 国外媒体 = select, ✈️ 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点 
+ 🍔 国内媒体 = select, 🌐 全球直连, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点 
+ 🍟 新浪微博 = select, 🌐 全球直连, ✈️ 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点 
+ Ⓜ️ 微软服务 = select, 🌐 全球直连, ✈️ 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点 
+ 🍎 苹果服务 = select, 🌐 全球直连, ✈️ 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点 
+ 🎮 游戏平台 = select, 🌐 全球直连, ✈️ 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点 
+ # > 外部节点 
+ 🇭🇰 香港节点 = fallback, policy-path=订阅地址, update-interval=0, policy-regex-filter=(🇭🇰)|(港)|(Hong)|(HK) 
+ 🇨🇳 台湾节点 = fallback, policy-path=订阅地址, update-interval=0, policy-regex-filter=(🇨🇳)|(台)|(Tai)|(TW) 
+ 🇺🇲 美国节点 = fallback, policy-path=订阅地址, update-interval=0, policy-regex-filter=(🇺🇸)|(美)|(States)|(US) 
+ 🇯🇵 日本节点 = fallback, policy-path=订阅地址, update-interval=0, policy-regex-filter=(🇯🇵)|(日)|(Japan)|(JP) 
+ 🇸🇬 新加坡节点 = fallback, policy-path=订阅地址, update-interval=0, policy-regex-filter=(🇸🇬)|(新)|(Singapore)|(SG) 
+ 🚀 手动选择 = select, policy-path=订阅地址, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0
 [Rule]
 # 自定义规则
 ## 您可以在此处插入自定义规则
