--- a/surfboard.conf
+++ b/surfboard.conf
@@ -105,12 +105,12 @@ lv.5-中国->澳大利亚5=ss,zh01lv5au05.feiguayun.xyz,39087,encrypt-method=aes
  🍎 苹果服务 = select, 🌐 全球直连, ✈️ 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点 
  🎮 游戏平台 = select, 🌐 全球直连, ✈️ 节点选择, 🇭🇰 香港节点, 🇺🇲 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点 
  # > 外部节点 
- 🇭🇰 香港节点 = fallback, policy-path=订阅地址, update-interval=0, policy-regex-filter=(🇭🇰)|(港)|(Hong)|(HK) 
- 🇨🇳 台湾节点 = fallback, policy-path=订阅地址, update-interval=0, policy-regex-filter=(🇨🇳)|(台)|(Tai)|(TW) 
- 🇺🇲 美国节点 = fallback, policy-path=订阅地址, update-interval=0, policy-regex-filter=(🇺🇸)|(美)|(States)|(US) 
- 🇯🇵 日本节点 = fallback, policy-path=订阅地址, update-interval=0, policy-regex-filter=(🇯🇵)|(日)|(Japan)|(JP) 
- 🇸🇬 新加坡节点 = fallback, policy-path=订阅地址, update-interval=0, policy-regex-filter=(🇸🇬)|(新)|(Singapore)|(SG) 
- 🚀 手动选择 = select, policy-path=订阅地址, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0
+ 🇭🇰 香港节点 = fallback, update-interval=0, policy-regex-filter=(🇭🇰)|(港)|(Hong)|(HK) 
+ 🇨🇳 台湾节点 = fallback, update-interval=0, policy-regex-filter=(🇨🇳)|(台)|(Tai)|(TW) 
+ 🇺🇲 美国节点 = fallback, update-interval=0, policy-regex-filter=(🇺🇸)|(美)|(States)|(US) 
+ 🇯🇵 日本节点 = fallback, update-interval=0, policy-regex-filter=(🇯🇵)|(日)|(Japan)|(JP) 
+ 🇸🇬 新加坡节点 = fallback, update-interval=0, policy-regex-filter=(🇸🇬)|(新)|(Singapore)|(SG) 
+ 🚀 手动选择 = select, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0
 [Rule]
 # 自定义规则
 ## 您可以在此处插入自定义规则
