--- a/surfboard.conf
+++ b/surfboard.conf
@@ -106,7 +106,7 @@ lv.5-中国->澳大利亚5=ss,zh01lv5au05.feiguayun.xyz,39087,encrypt-method=aes
  🇺🇲 美国节点 = fallback, update-interval=0, policy-regex-filter=(🇺🇸)|(美)|(States)|(US) 
  🇯🇵 日本节点 = fallback, update-interval=0, policy-regex-filter=(🇯🇵)|(日)|(Japan)|(JP) 
  🇸🇬 新加坡节点 = fallback, update-interval=0, policy-regex-filter=(🇸🇬)|(新)|(Singapore)|(SG) 
- 🚀 手动选择 = select, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0
+ 🚀 手动选择 = update-interval=0, no-alert=0, hidden=0, include-all-proxies=0
 [Rule]
 # 自定义规则
 ## 您可以在此处插入自定义规则
